Fixed NavBar CTA Button on Mobile

--- a/LandingPage/Components/NavigationBar.razor.scss
+++ b/LandingPage/Components/NavigationBar.razor.scss
@@ -1,3 +1,5 @@
-﻿.btn-green{
-    vertical-align: center !important;
+﻿@media (max-width: 767px) {
+    .hidden-mobile {
+        display: none;
+    }
 }
